muoni/GraalVM/language/tests/error/TypeError06.hn
fn main() {
  defineFunction(3);
}  
